--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ section {
 /* Hero Section */
 .hero {
   position: relative;
-  background-image: url('../images/edinburgh.jpeg');
+  background-image: url('./images/edinburgh.jpeg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
