--- a/styles.css
+++ b/styles.css
@@ -67,15 +67,15 @@ section {
   position: relative;
 }
 
-/* Navbar List */
+/* Navbar List 
 .navbar ul {
   margin: 0;
   padding: 0;
   display: flex;
-  gap: 1rem; /* Space between items */
+  gap: 1rem; 
   list-style: none;
 }
-
+*/
 
 /* Logo 
 .logo {
@@ -90,7 +90,7 @@ section {
   list-style: none;
   display: flex;
   gap: 1.5rem;
-  margin: 0;
+  margin-left: auto;
   padding: 0;
 }
 
@@ -123,6 +123,7 @@ section {
   font-size: 2rem;
   color: white;
   cursor: pointer;
+  margin-left: auto;
 }
 
 
@@ -134,11 +135,12 @@ section {
     flex-direction: column;
     position: absolute;
     top: 60px;
-    right: 0;
-    background: #004aad;
+    left: 0;
     width: 100%;
+    background: #004aad;
     text-align: center;
     padding: 1rem 0;
+    z-index: 100;
   }
 
   /* Show menu icon */
